Remove dead dependency on cron-parser

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "author": "Daniel Roux",
   "license": "MIT",
   "dependencies": {
-    "bignumber.js": "^4.1.0",
-    "cron-parser": "^2.4.3"
+    "bignumber.js": "^4.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
