--- a/lib/.babelrc
+++ b/lib/.babelrc
@@ -1,46 +1,18 @@
 {
-  "presets": ["react"],
+  "presets": ["@babel/preset-react"],
   "env": {
     "development": {
       "plugins": [
-        "react-hot-loader/babel",
-        [
-          "react-transform",
-          {
-            "transforms": [
-              {
-                "transform": "react-transform-hmr",
-                "imports": ["react"],
-                "locals": ["module"]
-              },
-              {
-                "transform": "react-transform-catch-errors",
-                "imports": ["react", "redbox-react"]
-              }
-            ]
-          }
-        ],
-        "transform-class-properties",
-        "transform-object-rest-spread",
-        "transform-function-bind"
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread",
+        "@babel/proposal-function-bind"
       ]
     },
     "production": {
       "plugins": [
-        [
-          "react-transform",
-          {
-            "transforms": [
-              {
-                "transform": "react-transform-catch-errors",
-                "imports": ["react", "redbox-react"]
-              }
-            ]
-          }
-        ],
-        "transform-class-properties",
-        "transform-object-rest-spread",
-        "transform-function-bind"
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread",
+        "@babel/proposal-function-bind"
       ]
     }
   }
